Fix/job lists qa (#334)
* fix(filters): active state on filter buttons and visual bugs

* fix(navigation): flyout navigation height fix on mobile

* fix(navigation): calculate view height

* fix(navigation): remove navigation height

* fix(filters): adapt styling for dark mode and refactor height calc

* fix(filters): filter button clear all color

* fix(jobs): text teaser component overflowing

--- a/src/styles/includes/_jobs-page.scss
+++ b/src/styles/includes/_jobs-page.scss
@@ -62,7 +62,8 @@ $filter-bar__height--desktop: 11.8rem;
 		@include spacing-700(margin-bottom);
 	}
 
-	&--offering {
+	&--offering,
+	&--teaser {
 		overflow-x: hidden;
 	}
 
@@ -92,6 +93,10 @@ $filter-bar__height--desktop: 11.8rem;
 		// this is the height of the closed menu
 		max-height: $filter-bar__height--mobile;
 		overflow: hidden;
+
+		@include bp-s {
+			position: initial;
+		}
 
 		@include bp-xs {
 			position: initial;
@@ -159,60 +164,62 @@ $filter-bar__height--desktop: 11.8rem;
 				@include active-filters();
 			}
 		}
-
 		// filter chip
 		&__filter-item {
 			line-height: initial;
 			background-color: $color-primary--900;
-
+			color: $color-primary--white;
 			svg {
-				margin-left: 0;
 				filter: invert(1);
 			}
 
-			&:hover {
+			&.is-active {
+				background-color: $color-primary--white;
+				color: $color-primary--900;
 				svg {
 					filter: invert(0);
 				}
 
-				circle {
-					transition: transform 0.3s ease-in-out;
-					transform: scale(1);
+				&:hover {
+					svg {
+						filter: invert(1);
+					}
+
+					circle {
+						transition: transform 0.3s ease-in-out;
+						transform: scale(1);
+					}
+				}
+
+				.filter-checkbox__icon__animated-path {
+					@include default-animation(transform);
+
+					transform-origin: center;
+					transform: rotate(90deg);
 				}
 			}
-
-			.filter-checkbox__icon__animated-path {
-				@include default-animation(transform);
-
-				transform-origin: center;
-			}
-		}
-
-		// active filter state
-		input[type="checkbox"]:checked + &__filter-item {
-			background-color: $color-primary--white;
-			color: $color-primary--900;
-
-			svg {
-				filter: invert(0);
-			}
-
-			&:hover {
+			.is-dark & {
 				svg {
-					filter: invert(1);
+					filter: invert(0);
+				}
+				&.is-active {
+					svg {
+						filter: invert(1);
+					}
+					&:hover {
+						svg {
+							filter: invert(0);
+						}
+					}
 				}
 
-				circle {
-					transition: transform 0.3s ease-in-out;
-					transform: scale(1);
+				.button--clear {
+					color: $color-primary--white;
 				}
-			}
-
-			.filter-checkbox__icon__animated-path {
-				@include default-animation(transform);
-
-				transform-origin: center;
-				transform: rotate(90deg);
+				.button--secondary {
+					background-color: $color-primary--white;
+					color: $color-primary--black;
+				}
 			}
 		}
 
@@ -349,7 +356,7 @@ $filter-bar__height--desktop: 11.8rem;
 					@include spacing-400(padding-bottom);
 
 					background: $color-primary--white;
-					z-index: 13;
+					z-index: 12;
 
 					.is-dark & {
 						background: transparent;
@@ -422,17 +429,11 @@ $filter-bar__height--desktop: 11.8rem;
 		}
 	}
 
-	// When the fullscreen filter menu is open we want to prevent scrolling in the background
-	.freeze-scroll {
-		height: 100vh;
-		overflow-y: hidden;
-	}
-
 	.job-filter-wrapper {
 		@include bp-xs {
 			transform: translateX(100%);
 			transition: transform 0.2s linear;
-			height: 100vh;
+			height: var(--mobile-height);
 			overflow: scroll;
 			z-index: 14;
 			top: 0;
@@ -454,6 +455,7 @@ $filter-bar__height--desktop: 11.8rem;
 
 				.button--clear {
 					background-color: $color-primary--gray;
+					color: $color-primary--white;
 				}
 			}
 		}
@@ -468,6 +470,12 @@ $filter-bar__height--desktop: 11.8rem;
 			padding: 0;
 		}
 	}
+}
+
+// When the fullscreen filter menu is open we want to prevent scrolling in the background
+.freeze-scroll {
+	height: 100vh;
+	overflow: hidden;
 }
 
 .toggle-button--jobs {
